[tool.poetry]
name = "vodka"
version = "2.3.0.1"
description = "plugin based real-time web service daemon"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    'Environment :: No Input/Output (Daemon)',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Internet',
]

[tool.poetry.dependencies]
python = "^3.6"

click = "*"
munge = "^1"
pluginmgr = "^1"
tmpl = "^0"

[tool.poetry.dev-dependencies]
codecov = "^2"
coverage = "^4"
pytest-cov = ">=2.4.0,<3.0.0"
pytest = ">=5,<6"
tox = ">=3.8"

# linting
bandit = "^1.6.2"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"


[tool.poetry.scripts]
bartender = "vodka.bartender:bartender"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
