[tool.poetry]
name = "vodka"
version = "3.0.0"
description = "plugin based real-time web service daemon"
readme = "README.md"
repository = "https://github.com/20c/vodka"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    'Environment :: No Input/Output (Daemon)',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Internet',
]

packages = [
    { include = "vodka", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6.2"

click = "*"
munge = "^1"
pluginmgr = "^1"
tmpl = "^1"

[tool.poetry.dev-dependencies]
codecov = "^2"
coverage = "^4"
pytest-cov = ">=2.4.0,<3.0.0"
pytest = ">=5,<6"
tox = ">=3.8"

# linting
black = { version = ">=20", allow-prereleases = true }
# isort breaks imports
# isort = "^5.7.0"
flake8 = "^3.8.4"
pre-commit = "^2.13"
pyupgrade = "^2.19.4"


[tool.poetry.scripts]
bartender = "vodka.bartender:bartender"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
